increase spacing in docs to avoid icon cut-off

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1143,7 +1143,7 @@ ul.tag-list {
   margin: 0 auto; }
 
 .docs-wrapper {
-  padding: 0 calc(1rem + 1vw);
+  padding: 0 calc(1rem + 1.5vw);
   flex: 1; }
   @media all and (min-width: 1023px) {
     .docs-wrapper {
