--- a/src/assets/scss/_docs.scss
+++ b/src/assets/scss/_docs.scss
@@ -4,7 +4,7 @@
 }
 
 .docs-wrapper {
-    padding: 0 calc(1rem + 1vw);
+    padding: 0 calc(1rem + 1.5vw);
     flex: 1;
 
     @media all and (min-width: 1023px) {
